--- a/wrangler.toml
+++ b/wrangler.toml
@@ -1,14 +1,15 @@
 #:schema node_modules/wrangler/config-schema.json
-name = "remix-cloudflare-workers-template"
+name = "starter"
 
 main = "./server.ts"
 workers_dev = true
 # https://developers.cloudflare.com/workers/platform/compatibility-dates
-compatibility_date = "2024-09-26"
+compatibility_date = "2025-03-05"
+compatibility_flags = ["nodejs_compat", "nodejs_compat_populate_process_env"]
 
 [assets]
 # https://developers.cloudflare.com/workers/static-assets/binding/
 directory = "./build/client"
 
 [build]
-command = "pnpm run build"
+command = "bun run build"
