--- a/package.json
+++ b/package.json
@@ -16,29 +16,31 @@
   },
   "dependencies": {
     "@react-router/cloudflare": "7.4.0",
+    "hono": "^4.7.5",
+    "hono-react-router-adapter": "^0.6.3",
     "isbot": "^5.1.25",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
     "react-router": "7.4.0"
   },
   "devDependencies": {
-			"@biomejs/biome": "^1.9.4",
-			"@cloudflare/workers-types": "^4.20250321.0",
-			"@react-router/dev": "7.4.0",
-			"@react-router/fs-routes": "7.4.0",
-			"@types/react": "^19.0.12",
-			"@types/react-dom": "^19.0.4",
-			"autoprefixer": "^10.4.21",
-			"postcss": "^8.5.3",
-			"prettier": "^3.5.3",
-			"prettier-plugin-organize-imports": "^4.1.0",
-			"prettier-plugin-tailwindcss": "^0.6.11",
-			"tailwindcss": "^3.4.14",
-			"typescript": "^5.8.2",
-			"vite": "^6.2.2",
-			"vite-tsconfig-paths": "^5.1.4",
-			"wrangler": "^4.4.0"
-		},
+    "@biomejs/biome": "^1.9.4",
+    "@cloudflare/workers-types": "^4.20250321.0",
+    "@react-router/dev": "7.4.0",
+    "@react-router/fs-routes": "7.4.0",
+    "@types/react": "^19.0.12",
+    "@types/react-dom": "^19.0.4",
+    "autoprefixer": "^10.4.21",
+    "postcss": "^8.5.3",
+    "prettier": "^3.5.3",
+    "prettier-plugin-organize-imports": "^4.1.0",
+    "prettier-plugin-tailwindcss": "^0.6.11",
+    "tailwindcss": "^3.4.14",
+    "typescript": "^5.8.2",
+    "vite": "^6.2.2",
+    "vite-tsconfig-paths": "^5.1.4",
+    "wrangler": "^4.4.0"
+  },
   "engines": {
     "node": ">=20.0.0"
   }
