--- a/wrangler.toml
+++ b/wrangler.toml
@@ -1,7 +1,7 @@
 #:schema node_modules/wrangler/config-schema.json
 name = "starter"
 
-main = "./server.ts"
+main = "./worker.ts"
 workers_dev = true
 # https://developers.cloudflare.com/workers/platform/compatibility-dates
 compatibility_date = "2025-03-05"
