--- a/package.json
+++ b/package.json
@@ -15,7 +15,9 @@
     "validate": "pnpm run lint && pnpm run format && pnpm run typecheck"
   },
   "dependencies": {
+    "@hono/zod-openapi": "^0.19.2",
     "@react-router/cloudflare": "7.4.0",
+    "@scalar/hono-api-reference": "^0.7.2",
     "hono": "^4.7.5",
     "hono-react-router-adapter": "^0.6.3",
     "isbot": "^5.1.25",
