--- a/tsconfig.json
+++ b/tsconfig.json
@@ -28,7 +28,8 @@
     "forceConsistentCasingInFileNames": true,
     "baseUrl": ".",
     "paths": {
-      "~/*": ["./app/*"]
+      "@/*": ["./app/*"],
+      "@/api/*": ["./api/*"]
     },
 
     // Remix takes care of building everything in `remix build`.
