--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "@hono/zod-openapi": "^0.19.2",
     "@react-router/cloudflare": "7.4.0",
     "@scalar/hono-api-reference": "^0.7.2",
+    "drizzle-orm": "^0.41.0",
     "hono": "^4.7.5",
     "hono-react-router-adapter": "^0.6.3",
     "isbot": "^5.1.25",
@@ -30,9 +31,11 @@
     "@cloudflare/workers-types": "^4.20250321.0",
     "@react-router/dev": "7.4.0",
     "@react-router/fs-routes": "7.4.0",
+    "@types/node": "^22.13.11",
     "@types/react": "^19.0.12",
     "@types/react-dom": "^19.0.4",
     "autoprefixer": "^10.4.21",
+    "drizzle-kit": "^0.30.5",
     "postcss": "^8.5.3",
     "prettier": "^3.5.3",
     "prettier-plugin-organize-imports": "^4.1.0",
