--- a/package.json
+++ b/package.json
@@ -1,52 +1,56 @@
 {
-  "name": "starter",
-  "private": true,
-  "sideEffects": false,
-  "type": "module",
-  "scripts": {
-    "build": "react-router build",
-    "deploy": "wrangler deploy",
-    "dev": "react-router dev",
-    "start": "wrangler dev",
-    "typegen": "wrangler types",
-    "lint": "biome lint .",
-    "format": "prettier --check .",
-    "typecheck": "tsc",
-    "validate": "pnpm run lint && pnpm run format && pnpm run typecheck"
-  },
-  "dependencies": {
-    "@hono/zod-openapi": "^0.19.2",
-    "@react-router/cloudflare": "7.4.0",
-    "@scalar/hono-api-reference": "^0.7.2",
-    "drizzle-orm": "^0.41.0",
-    "hono": "^4.7.5",
-    "hono-react-router-adapter": "^0.6.3",
-    "isbot": "^5.1.25",
-    "react": "^19.0.0",
-    "react-dom": "^19.0.0",
-    "react-router": "7.4.0"
-  },
-  "devDependencies": {
-    "@biomejs/biome": "^1.9.4",
-    "@cloudflare/workers-types": "^4.20250321.0",
-    "@react-router/dev": "7.4.0",
-    "@react-router/fs-routes": "7.4.0",
-    "@types/node": "^22.13.11",
-    "@types/react": "^19.0.12",
-    "@types/react-dom": "^19.0.4",
-    "autoprefixer": "^10.4.21",
-    "drizzle-kit": "^0.30.5",
-    "postcss": "^8.5.3",
-    "prettier": "^3.5.3",
-    "prettier-plugin-organize-imports": "^4.1.0",
-    "prettier-plugin-tailwindcss": "^0.6.11",
-    "tailwindcss": "^3.4.14",
-    "typescript": "^5.8.2",
-    "vite": "^6.2.2",
-    "vite-tsconfig-paths": "^5.1.4",
-    "wrangler": "^4.4.0"
-  },
-  "engines": {
-    "node": ">=20.0.0"
-  }
+	"name": "starter",
+	"private": true,
+	"sideEffects": false,
+	"type": "module",
+	"scripts": {
+		"build": "react-router build",
+		"deploy": "wrangler deploy",
+		"dev": "react-router dev",
+		"start": "wrangler dev",
+		"typegen": "wrangler types",
+		"lint": "biome lint .",
+		"format": "prettier --check .",
+		"db:generate": "bunx drizzle-kit generate",
+		"db:migrate": "bunx drizzle-kit migrate",
+		"typecheck": "tsc",
+		"validate": "pnpm run lint && pnpm run format && pnpm run typecheck"
+	},
+	"dependencies": {
+		"@hono/zod-openapi": "^0.19.2",
+		"@paralleldrive/cuid2": "^2.2.2",
+		"@react-router/cloudflare": "7.4.0",
+		"@scalar/hono-api-reference": "^0.7.2",
+		"better-auth": "^1.2.4",
+		"drizzle-orm": "^0.41.0",
+		"drizzle-zod": "^0.7.0",
+		"hono": "^4.7.5",
+		"hono-react-router-adapter": "^0.6.3",
+		"isbot": "^5.1.25",
+		"react": "^19.0.0",
+		"react-dom": "^19.0.0",
+		"react-router": "7.4.0"
+	},
+	"devDependencies": {
+		"@biomejs/biome": "^1.9.4",
+		"@cloudflare/workers-types": "^4.20250321.0",
+		"@react-router/dev": "7.4.0",
+		"@react-router/fs-routes": "7.4.0",
+		"@types/react": "^19.0.12",
+		"@types/react-dom": "^19.0.4",
+		"autoprefixer": "^10.4.21",
+		"drizzle-kit": "^0.30.5",
+		"postcss": "^8.5.3",
+		"prettier": "^3.5.3",
+		"prettier-plugin-organize-imports": "^4.1.0",
+		"prettier-plugin-tailwindcss": "^0.6.11",
+		"tailwindcss": "^3.4.14",
+		"typescript": "^5.8.2",
+		"vite": "^6.2.2",
+		"vite-tsconfig-paths": "^5.1.4",
+		"wrangler": "^4.4.0"
+	},
+	"engines": {
+		"node": ">=20.0.0"
+	}
 }
