--- a/package.json
+++ b/package.json
@@ -34,9 +34,11 @@
     "@cloudflare/workers-types": "^4.20250321.0",
     "@react-router/dev": "7.4.0",
     "@react-router/fs-routes": "7.4.0",
+    "@types/pg": "^8.11.11",
     "@types/react": "^19.0.12",
     "@types/react-dom": "^19.0.4",
     "autoprefixer": "^10.4.21",
+    "pg": "^8.14.1",
     "postcss": "^8.5.3",
     "prettier": "^3.5.3",
     "prettier-plugin-organize-imports": "^4.1.0",
