--- a/packages/db/package.json
+++ b/packages/db/package.json
@@ -13,6 +13,8 @@
     "drizzle-orm": "^0.41.0"
   },
   "devDependencies": {
+    "@types/bun": "^1.2.5",
+    "dotenv": "^16.4.7",
     "drizzle-kit": "^0.30.5"
   }
 }
