feat: minor changes to API

--- a/package.json
+++ b/package.json
@@ -10,7 +10,7 @@
     "start": "wrangler dev",
     "typegen": "wrangler types",
     "lint": "biome lint .",
-    "format": "prettier --check .",
+    "format": "biome check --write .",
     "typecheck": "tsc",
     "validate": "pnpm run lint && pnpm run format && pnpm run typecheck",
     "db:generate": "bun run --cwd packages/db drizzle-kit --config config.ts generate",
@@ -45,9 +45,6 @@
     "autoprefixer": "^10.4.21",
     "pg": "^8.14.1",
     "postcss": "^8.5.3",
-    "prettier": "^3.5.3",
-    "prettier-plugin-organize-imports": "^4.1.0",
-    "prettier-plugin-tailwindcss": "^0.6.11",
     "tailwindcss": "^3.4.14",
     "typescript": "^5.8.2",
     "vite": "^6.2.2",
